--- a/src/App.scss
+++ b/src/App.scss
@@ -104,10 +104,15 @@ body {
       overflow: hidden;
       border-radius: 24px;
 
-      img {
-        width: 100%;
-        border-radius: 25px;
-        transition: $transition-base;
+      .image {
+        @include aspect-ratio(21, 32);
+
+        img {
+          width: 100%;
+          border-radius: 25px;
+          transition: $transition-base;
+          object-fit: cover;
+        }
       }
 
       .image-overlay {
@@ -126,9 +131,17 @@ body {
           opacity: 0;
           transition: all 500ms ease;
 
+          @include screen-min() {
+            font-size: 15px;
+          }
+
           strong {
             font-size: 14px;
             font-weight: bold;
+
+            @include screen-min() {
+              font-size: 16px;
+            }
           }
 
           .info {
@@ -153,6 +166,57 @@ body {
 
       .year {
         font-size: 14px;
+      }
+    }
+  }
+}
+
+.pagination-wrapper {
+  .pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1em 0;
+
+    li {
+      position: relative;
+      display: inline-block;
+      padding: 0.5em;
+      margin: 0 0.5em;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      cursor: pointer;
+      transition: background 0.2s;
+
+      &.disabled {
+        pointer-events: none;
+        opacity: 0.5;
+      }
+
+      &.active,
+      &:hover {
+        background: #ccc;
+      }
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        border: none;
+        background: transparent;
+        cursor: pointer;
+
+        &:before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          right: 0;
+          left: 0;
+          bottom: 0;
+        }
       }
     }
   }
