--- a/src/index.scss
+++ b/src/index.scss
@@ -172,3 +172,19 @@ table {
     @content;
   }
 }
+
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  height: 0;
+  padding-top: ($height / $width) * 100%;
+
+  & > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
