--- a/src/App.scss
+++ b/src/App.scss
@@ -67,21 +67,23 @@ body {
 .cards-wrapper {
   display: flex;
   flex-direction: column;
-  max-width: 550px;
+  max-width: 450px;
   margin: auto;
 
   @include screen-min() {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 1280px;
+    max-width: 1200px;
   }
 
   .card {
     margin-bottom: 60px;
+    cursor: default;
 
     @include screen-min() {
       flex: 0 0 30%;
+      margin-bottom: 100px;
     }
 
     &:hover {
@@ -175,18 +177,36 @@ body {
   .pagination {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: 1em 0;
 
+    @include screen-min() {
+      justify-content: center;
+    }
+
     li {
+      display: block;
       position: relative;
       display: inline-block;
-      padding: 0.5em;
-      margin: 0 0.5em;
+      padding: 20px;
+      margin: 0 10px;
       border: 1px solid #ccc;
       border-radius: 3px;
       cursor: pointer;
       transition: background 0.2s;
+
+      @include screen-min() {
+        padding: 10px;
+        border: none;
+      }
+
+      &:not(.previous):not(.next) {
+        display: none;
+
+        @include screen-min() {
+          display: block;
+        }
+      }
 
       &.disabled {
         pointer-events: none;
@@ -195,7 +215,7 @@ body {
 
       &.active,
       &:hover {
-        background: #ccc;
+        background: rgba(204, 204, 204, 0.47);
       }
 
       a {
