--- a/src/App.scss
+++ b/src/App.scss
@@ -118,12 +118,16 @@ body {
       }
 
       .image-overlay {
+        $padding-vertical: 34px;
+        $padding-horizontal: 20px;
+
         background-color: rgba(167, 167, 167, 0.788);
         position: absolute;
-        height: calc(100% - 34px * 2);
+        width: calc(100% - #{$padding-horizontal} * 2);
+        height: calc(100% - #{$padding-vertical} * 2);
         top: 0;
         border-radius: 25px;
-        padding: 34px 20px;
+        padding: $padding-vertical 20px;
         font-size: 12px;
         color: $black;
         visibility: hidden;
