--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -3,6 +3,7 @@
 .card {
   margin-bottom: 60px;
   cursor: default;
+  font-family: $font-family-body;
 
   @include screen-min() {
     flex: 0 0 30%;
