--- a/src/App.scss
+++ b/src/App.scss
@@ -76,10 +76,11 @@ body {
     flex-wrap: wrap;
     max-width: 1200px;
   }
-
 }
 
 .pagination-wrapper {
+  font-family: $font-family-body;
+
   .pagination {
     display: flex;
     align-items: center;
@@ -152,6 +153,7 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 100px;
+  font-family: $font-family-body;
 
   .made-by {
     font-size: 12px;
