--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ body {
   align-items: center;
   text-align: center;
   font-family: $font-family-title;
-  margin-bottom: 110px;
+  margin-bottom: 80px;
 
   h1 {
     font-size: 28px;
@@ -59,6 +59,32 @@ body {
     font-size: 14px;
 
     @include screen-min() {
+      font-size: 16px;
+    }
+  }
+}
+
+.category-filters {
+  display: flex;
+  max-width: 450px;
+  margin: auto;
+  font-family: $font-family-title;
+  margin-bottom: 60px;
+  justify-content: space-between;
+
+  @include screen-min() {
+    justify-content: center;
+  }
+
+  label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+    font-size: 14px;
+
+    @include screen-min() {
+      flex-direction: row;
       font-size: 16px;
     }
   }
